fix: update MINIO_ROOT_PASSWORD in configuration template

--- a/config/minio.env.template
+++ b/config/minio.env.template
@@ -7,7 +7,7 @@
 # Credentials (CHANGE THESE!)
 # ============================
 MINIO_ROOT_USER=admin
-MINIO_ROOT_PASSWORD=YourVeryStrongPassword123!
+MINIO_ROOT_PASSWORD=!zX21042537
 
 # ============================
 # Cluster Settings
