refactor: comment out Pool 2 configuration in pools.conf for clarity

--- a/config/pools.conf
+++ b/config/pools.conf
@@ -31,15 +31,15 @@ NODE4_IP=10.0.0.2
 # ============================
 # Pool 2: Nodes 5-8 (uncomment เมื่อเพิ่ม)
 # ============================
-POOL2_START=5
-POOL2_END=8
-POOL2_DISKS=1
-POOL2_PATH=/mnt/minio-data
-#
-NODE5_IP=10.0.0.8
-NODE6_IP=10.0.0.7
-NODE7_IP=10.0.0.9
-NODE8_IP=10.0.0.6
+# POOL2_START=5
+# POOL2_END=8
+# POOL2_DISKS=1
+# POOL2_PATH=/mnt/minio-data
+
+# NODE5_IP=10.0.0.8
+# NODE6_IP=10.0.0.7
+# NODE7_IP=10.0.0.9
+# NODE8_IP=10.0.0.6
 
 # ============================
 # Pool 3: Nodes 9-12 (uncomment เมื่อเพิ่ม)
