Update multi-drive setup for 4 servers x 4 disks

--- a/config/pools.conf
+++ b/config/pools.conf
@@ -16,7 +16,8 @@ MINIO_SITE_REGION=cloud
 MINIO_SITE_NAME=minio-cluster
 
 # ============================
-# Pool 1: Nodes 1-4
+# Pool 1: VPS Nodes 1-4 (Single Disk)
+# สำหรับ Cloud VPS ที่มี 1 disk ต่อเครื่อง
 # ============================
 POOL1_START=1
 POOL1_END=4
@@ -29,7 +30,7 @@ NODE3_IP=10.0.0.4
 NODE4_IP=10.0.0.2
 
 # ============================
-# Pool 2: Nodes 5-8 (uncomment เมื่อเพิ่ม)
+# Pool 2: VPS Nodes 5-8 (Single Disk)
 # ============================
 # POOL2_START=5
 # POOL2_END=8
@@ -42,14 +43,40 @@ NODE4_IP=10.0.0.2
 # NODE8_IP=10.0.0.6
 
 # ============================
-# Pool 3: Nodes 9-12 (uncomment เมื่อเพิ่ม)
+# Pool 3: Dedicated Servers (4 Disks per Server)
+# สำหรับ Hetzner Dedicated 4x10TB per server
+# 4 servers x 4 disks = 16 disks = 160TB raw = ~80TB usable
 # ============================
-# POOL3_START=9
-# POOL3_END=12
+# POOL3_START=1
+# POOL3_END=4
 # POOL3_DISKS=4
-# POOL3_PATH=/data/disk
+# POOL3_PATH=/mnt/disk
 #
-# NODE9_IP=10.0.0.10
-# NODE10_IP=10.0.0.11
-# NODE11_IP=10.0.0.12
-# NODE12_IP=10.0.0.13
+# NODE1_IP=10.0.1.1
+# NODE2_IP=10.0.1.2
+# NODE3_IP=10.0.1.3
+# NODE4_IP=10.0.1.4
+
+# ============================
+# Example: Dedicated-Only Cluster (4 servers x 4 disks)
+# ============================
+# ใช้ config นี้เมื่อมี Dedicated Servers ใหม่:
+#
+# POOL1_START=1
+# POOL1_END=4
+# POOL1_DISKS=4
+# POOL1_PATH=/mnt/disk
+#
+# NODE1_IP=10.0.0.1
+# NODE2_IP=10.0.0.2
+# NODE3_IP=10.0.0.3
+# NODE4_IP=10.0.0.4
+#
+# Disk Layout per server:
+#   /mnt/disk1 -> /dev/sdb (10TB)
+#   /mnt/disk2 -> /dev/sdc (10TB)
+#   /mnt/disk3 -> /dev/sdd (10TB)
+#   /mnt/disk4 -> /dev/sde (10TB)
+#
+# MINIO_VOLUMES จะถูก generate เป็น:
+#   http://minio{1...4}:9000/mnt/disk{1...4}
