feat: add Hetzner installation and post-install scripts for MinIO setup

--- a/config/pools.conf
+++ b/config/pools.conf
@@ -11,9 +11,9 @@
 # Credentials (ต้องเหมือนกันทุก node)
 # ============================
 MINIO_ROOT_USER=admin
-MINIO_ROOT_PASSWORD=!zX21042537
-MINIO_SITE_REGION=cloud
-MINIO_SITE_NAME=minio-cluster
+MINIO_ROOT_PASSWORD=YourSecurePassword!
+MINIO_SITE_REGION=eu-central
+MINIO_SITE_NAME=minio-hetzner
 
 # ============================
 # Pool 1: VPS Nodes 1-4 (Single Disk)
@@ -21,13 +21,13 @@ MINIO_SITE_NAME=minio-cluster
 # ============================
 POOL1_START=1
 POOL1_END=4
-POOL1_DISKS=1
-POOL1_PATH=/mnt/minio-data
+POOL1_DISKS=4
+POOL1_PATH=/mnt/disk
 
-NODE1_IP=10.0.0.3
-NODE2_IP=10.0.0.5
-NODE3_IP=10.0.0.4
-NODE4_IP=10.0.0.2
+NODE1_IP=10.0.0.1
+NODE2_IP=10.0.0.2
+NODE3_IP=10.0.0.3
+NODE4_IP=10.0.0.4
 
 # ============================
 # Pool 2: VPS Nodes 5-8 (Single Disk)
